# signal

./: .env.example  .gitignore  AGENT_PROMPTS_AND_MODEL_INFO.md  CLAUDE.md  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
configs/: agent_brain.toml  ai_tech.toml  demo.toml
data/: ai_sample_articles.json  sample_articles.json
docs/: ARCHITECTURE.md  EDIT_THE_BRAIN.md  PLAIN_ENGLISH_GUIDE.md  SCORING_RUBRIC.md
scripts/: start_dashboard.sh
signal_stream/: __init__.py  agent_runtime.py  agents.py  analysis_tools.py  cli.py  config.py  dashboard.py  editor_tools.py  env_loader.py  llm.py  models.py  orchestrator.py  prompt_loader.py  prompts.py  runtime_config.py  settings_manifest.py  source_health.py  source_registry.py  source_tools.py  storage.py  text.py  worker.py
tests/: test_agent_brain_settings.py  test_agent_runtime.py  test_briefing_v2_validation.py  test_critic_loop.py  test_dashboard_views.py  test_editor_fallback.py  test_editor_worker.py  test_groq_review.py  test_html_scrape_source.py  test_image_extraction.py  test_llm_error_capture.py  test_markdown_and_editor_model.py  test_pipeline.py  test_run_cursor.py  test_runtime_config.py  test_scoring_rubric.py  test_settings_coverage.py  test_source_health.py  test_source_registry.py  test_source_storage.py  test_storage.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: Markdown.tsx  Pagination.tsx
web/src/hooks/: use-toast.ts
web/src/lib/: api.ts  format.ts  queries.ts  types.ts  (+1 more)
(+61 files in other folders)
